# Neural-Network

./: .gitignore  .main.cpp.swp  CMakeLists.txt  Makefile  Neural.cpp  Neural.h  Visual.cpp  Visual.h  main.cpp  test1.cpp  test2.cpp  xor_example.cpp
